[gd_scene load_steps=10 format=2]

[ext_resource path="res://menus/buildNewRoom_roomButton.gd" type="Script" id=1]
[ext_resource path="res://gui/chiselbutton_light.png" type="Texture" id=2]
[ext_resource path="res://gui/chiselbutton_dark.png" type="Texture" id=3]
[ext_resource path="res://gui/chiselbutton_disabled.png" type="Texture" id=4]
[ext_resource path="res://gui/chiselbutton.png" type="Texture" id=5]

[sub_resource type="StyleBoxTexture" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 192, 64 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 192, 64 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 192, 64 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 192, 64 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[node name="Button" type="Node2D"]

script = ExtResource( 1 )

[node name="button_buildRoom" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_right = 460.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "custom_styles" ]

[node name="field_description" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 40.0
margin_right = 450.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "DESCRIPTION"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse" ]

[node name="field_name" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 10.0
margin_right = 460.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "###NAME###"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="button_buildRoom" to="." method="_on_button_buildRoom_pressed"]


